package pl.kansas.go.gui.controller;

public class ToolbarController {
}
